Review updates: add container name to docker compose and Helm value updates

--- a/docker-compose.override.yaml
+++ b/docker-compose.override.yaml
@@ -8,6 +8,7 @@ services:
     build:
       target: development
     image: ffc-template-node-development
+    container_name: ffc-template-node-development
     ports:
       - "3000:3000"
       - "9229:9229"
