--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,4 +7,6 @@ services:
       target: production
     image: ffc-template-node
     container_name: ffc-template-node
-    environment: {}
+    environment:
+      APPINSIGHTS_CLOUDROLE: ffc-template-node-local
+      APPINSIGHTS_INSTRUMENTATIONKEY: ${APPINSIGHTS_INSTRUMENTATIONKEY}
