--- a/docker-compose.test.yaml
+++ b/docker-compose.test.yaml
@@ -11,8 +11,8 @@ services:
     container_name: ffc-template-node-test
     command: npm run test
     volumes:
-      - ./app/:/home/node/app/
-      - ./test/:/home/node/test/
-      - ./test-output/:/home/node/test-output/
+      - ./app:/home/node/app
+      - ./test:/home/node/test
+      - ./test-output:/home/node/test-output
       - ./jest.config.js:/home/node/jest.config.js
       - ./package.json:/home/node/package.json
