--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
   "contributors": [],
   "license": "OGL-UK-3.0",
   "dependencies": {
-    "@hapi/hapi": "^20.2.1",
-    "applicationinsights": "^2.2.1"
+    "@hapi/hapi": "20.2.2",
+    "applicationinsights": "2.3.5"
   },
   "devDependencies": {
-    "jest": "^27.5.1",
-    "jest-junit": "^13.0.0",
-    "nodemon": "^2.0.15",
-    "standard": "^16.0.4"
+    "jest": "29.2.2",
+    "jest-junit": "14.0.1",
+    "nodemon": "2.0.20",
+    "standard": "17.0.0"
   },
   "standard": {
     "globals": [
