Updating instrumentation key to connection string

--- a/helm/ffc-template-node/values.yaml
+++ b/helm/ffc-template-node/values.yaml
@@ -9,7 +9,7 @@ labels:
   component: service
 
 appInsights:
-  key:
+  connectionString:
 
 containerConfigMap:
   name: ffc-template-node-config-map
