--- a/helm/ffc-template-node/Chart.yaml
+++ b/helm/ffc-template-node/Chart.yaml
@@ -1,9 +1,9 @@
 apiVersion: v2
 description: description-of-project-goes-here
-name: ffc-template-node
+name: adp-template-node
 # this version is automatically updated in the build pipeline
 version: 1.0.0
 dependencies:
-- name: ffc-helm-library
+- name: adp-helm-library
   version: 4.0.0
-  repository: https://raw.githubusercontent.com/defra/ffc-helm-repository/master/
+  repository: https://raw.githubusercontent.com/defra/adp-helm-repository/master/
