Update Helm chart

--- a/helm/ffc-template-node/templates/container-secret.yaml
+++ b/helm/ffc-template-node/templates/container-secret.yaml
@@ -2,6 +2,6 @@
 {{- define "ffc-template-node.container-secret" -}}
 stringData:
   {{- if .Values.appInsights.connectionString }}
-  APPINSIGHTS_CONNECTIONSTRING: {{ quote .Values.appInsights.connectionString }}
+  APPINSIGHTS_CONNECTIONSTRING: {{ .Values.appInsights.connectionString | quote }}
   {{- end }}
 {{- end -}}
