--- a/helm/ffc-template-node/templates/config-map.yaml
+++ b/helm/ffc-template-node/templates/config-map.yaml
@@ -1,7 +1,7 @@
 {{- include "ffc-helm-library.container-config-map" (list . "ffc-template-node.config-map") -}}
 {{- define "ffc-template-node.config-map" -}}
 data:
-  NODE_ENV: {{ quote .Values.environment }}
-  PORT: {{ quote .Values.container.port }}
-  APPINSIGHTS_CLOUDROLE: {{ quote .Values.name }}
+  NODE_ENV: {{ .Values.environment | quote }}
+  PORT: {{ .Values.container.port | quote }}
+  APPINSIGHTS_CLOUDROLE: {{ .Chart.Name | quote }}
 {{- end -}}
