Add Azure Identity resources

--- a/helm/ffc-template-node/values.yaml
+++ b/helm/ffc-template-node/values.yaml
@@ -1,3 +1,4 @@
+# Required values to support CI pipeline
 environment: production
 environmentCode:
 name: ffc-template-node
@@ -35,3 +36,9 @@ readinessProbe:
   periodSeconds: 10
   failureThreshold: 3
   timeoutSeconds: 5
+
+# Enable if Managed Identity is required, ensure the clientID and resourceID are set in Platform Configuration
+azureIdentity:
+  enabled: false
+  clientID: not-a-real-clientID
+  resourceID: not-a-real-resourceID
