--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
   "dependencies": {
     "@hapi/hapi": "21.3.2",
     "applicationinsights": "2.9.1",
+    "convict": "6.2.4",
+    "convict-format-with-validator": "6.2.0",
     "hapi-pino": "12.1.0",
     "joi": "17.13.3",
     "log-timestamp": "0.3.0"
   },
   "devDependencies": {
+    "blipp": "4.0.2",
     "jest": "29.7.0",
     "jest-junit": "16.0.0",
     "nodemon": "3.0.1",
