--- a/docker-compose.override.yaml
+++ b/docker-compose.override.yaml
@@ -13,6 +13,8 @@ services:
     volumes:
       - ./app:/home/node/app
       - ./package.json:/home/node/package.json
+    networks:
+      - ffc-template-node
 
 networks:
   ffc-template-node:
