--- a/helm/ffc-template-node/values.yaml
+++ b/helm/ffc-template-node/values.yaml
@@ -39,6 +39,8 @@ readinessProbe:
   failureThreshold: 3
   timeoutSeconds: 5
 
+workloadIdentity: true
+
 azureIdentity:
   clientID: not-a-real-clientID
   resourceID: not-a-real-resourceID
